[gd_scene load_steps=3 format=3 uid="uid://dicowcxtw81v8"]

[ext_resource type="Script" uid="uid://fl33ppun604b" path="res://scene/start_page.gd" id="1_vmxbn"]
[ext_resource type="Theme" uid="uid://bvbf0bvyvo0vp" path="res://resources/theme/normal_theme.tres" id="3_xbvye"]

[node name="Start Menu" type="CanvasLayer"]
script = ExtResource("1_vmxbn")

[node name="background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.151996, 0.151996, 0.151996, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 22
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbvye")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_font_sizes/font_size = 72
text = "像素肉鸽
(Icon Rogue)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Btn_StartGame" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbvye")
theme_override_font_sizes/font_size = 34
text = "开始游戏"

[node name="Btn_Settings" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbvye")
theme_override_font_sizes/font_size = 34
text = "游戏设置"

[node name="Btn_About" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbvye")
theme_override_font_sizes/font_size = 34
text = "关于"

[node name="Btn_Exit" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xbvye")
theme_override_font_sizes/font_size = 34
text = "退出游戏"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Btn_StartGame" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Btn_Settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Btn_About" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/Btn_Exit" to="." method="_on_btn_exit_pressed"]
